[gd_scene load_steps=6 format=3 uid="uid://c3f8uxxp155r7"]

[ext_resource type="Script" path="res://scripts/primary_menu.gd" id="1_fi2a2"]

[sub_resource type="LabelSettings" id="LabelSettings_xb621"]

[sub_resource type="Animation" id="Animation_bboec"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ycopk"]
resource_name = "ui_visibility"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qt1qt"]
_data = {
"RESET": SubResource("Animation_bboec"),
"ui_visibility": SubResource("Animation_ycopk")
}

[node name="Node2D" type="CanvasLayer"]

[node name="Menu" type="ColorRect" parent="."]
process_mode = 3
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.184314, 0.168627, 1)
script = ExtResource("1_fi2a2")

[node name="Container" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 8.0
offset_right = 1121.0
offset_bottom = 598.0
color = Color(0.188235, 0.25098, 0.227451, 1)

[node name="Title" type="Label" parent="Menu/Container"]
layout_mode = 0
offset_left = 287.0
offset_top = 80.0
offset_right = 791.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 40
label_settings = SubResource("LabelSettings_xb621")
horizontal_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.345098, 0.317647, 1)

[node name="TimeElapsed" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/TimeElapsed"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 546.0
offset_bottom = 27.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Time: "
vertical_alignment = 1
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/TimeElapsed"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_right = -268.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Snowmen" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/Snowmen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 40.0
offset_right = 354.0
offset_bottom = 67.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Snowmen: "
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/Snowmen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 40.0
offset_right = -268.0
offset_bottom = 67.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "1"

[node name="Level" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -55.0
offset_right = 50.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 80.0
offset_right = 354.0
offset_bottom = 107.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Highest Level: "
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/Level"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 80.0
offset_right = -268.0
offset_bottom = 107.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "1"

[node name="ContinueButton" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 553.0
offset_top = -205.0
offset_right = 813.0
offset_bottom = -115.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="RestartButton" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -810.0
offset_top = -204.0
offset_right = -540.0
offset_bottom = -114.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="SettingsButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 675.0
offset_top = 193.0
offset_right = 774.0
offset_bottom = 240.0
text = "Settings"

[node name="HelpButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 673.0
offset_top = 269.0
offset_right = 778.0
offset_bottom = 315.0
text = "Help"

[node name="OpenMenuAnimation" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_qt1qt")
}

[connection signal="pressed" from="Menu/Container/ContinueButton" to="Menu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="Menu/Container/RestartButton" to="Menu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="Menu/Container/SettingsButton" to="Menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/Container/HelpButton" to="Menu" method="_on_help_button_pressed"]
